# Indigo

api/: indigo.h
api/dotnet/: Indigo.cs  IndigoLib.cs
api/java/src/main/java/com/epam/indigo/: Indigo.java
api/plugins/renderer/src/: indigo_render2d.cpp
api/python/: indigo.py
api/src/: indigo_internal.h  indigo_misc.cpp  indigo_molecule.cpp  indigo_options.cpp  indigo_product_enumerator.cpp  option_manager.cpp  option_manager.h
bingo/bingo-core-c/src/: mango_core_c.cpp
bingo/bingo-core/src/core/: mango_gross.cpp  mango_index.cpp  mango_tautomer.cpp
bingo/oracle/src/oracle/: mango_operators.cpp
build_scripts/: indigo-release-utils.py
molecule/: molecule_allene_stereo.h  molecule_cis_trans.h  molecule_gross_formula.h  molecule_stereocenters.h
molecule/src/: base_molecule.cpp  gross_formula.cpp  inchi_wrapper.cpp  molecule_allene_stereo.cpp  molecule_cis_trans.cpp  molecule_name_parser.cpp  molecule_stereocenters.cpp
reaction/: reaction_gross_formula.h  reaction_mass.h
reaction/src/: reaction_gross_formula.cpp
utils/indigo-cano/: CMakeLists.txt
utils/indigo-deco/: CMakeLists.txt
utils/indigo-depict/: CMakeLists.txt
